src/main/java/com/example/keepstock/error/exception/ValidationException.java
package com.example.keepstock.error.exception;

public class ValidationException extends RuntimeException {
    public ValidationException(String message) {
        super(message);
    }
}